[package]
name = "cdumay_error_standard"
version = "1.0.3"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library which define standard errors"
documentation = "https://docs.rs/cdumay_error_standard"
edition = "2021"
homepage = "https://github.com/cdumay/cdumay_error_standard"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error_standard"

[dependencies]
cdumay_core = "0.1"
serde-value = "0.7"
